--- a/web/templates/admin/list_server_info.html
+++ b/web/templates/admin/list_server_info.html
@@ -40,5 +40,5 @@
   </div>
   <!-- /.l-header -->
 
-  <div style="color: #ff6701; padding: 10px 0 20px 20px; background: #fff; ">.</div><div class="l-center">
+  <div style="color: #ff6701; padding: 10px 0 20px 20px; background: #fff; ">.</div><div class="l-center" style="margin: 0 5% !important; max-width: 100% !important;">
   <pre style="color: #555">
