--- a/web/templates/admin/list_backup_detail.html
+++ b/web/templates/admin/list_backup_detail.html
@@ -4,13 +4,6 @@
         <div class="l-sort-toolbar clearfix">
           <table>
             <tr>
-              <td class="l-sort-toolbar__search-box">
-                <form action="/search/" method="get">
-                  <input type="hidden" name="token" value="<?=$_SESSION['token']?>" />
-                  <input type="text" name="q" class="search-input" value="<? echo isset($_POST['q']) ? htmlspecialchars($_POST['q']) : '' ?>" />
-                  <input type="submit" value="" class="l-sort-toolbar__search" onClick="return doSearch('/search/')" />
-                </form>
-              </td>
               <td class="toggle-all">
                 <input id="toggle-all" type="checkbox" name="toggle-all" value="toggle-all" onchange="checkedAll('objects');">
                 <label for="toggle-all" class="check-label toggle-all"><?=__('toggle all')?></label>
@@ -19,13 +12,13 @@
                 <form action="/bulk/restore/" method="post" id="objects">
                 <input type="hidden" name="token" value="<?=$_SESSION['token']?>" />
                 <input type="hidden" name="backup" value="<?=htmlentities($_GET['backup']); ?>">
-                <div class="l-select">
+                <div style="display: none;">
                   <select name="action">
                     <option value=""><?=__('apply to selected')?></option>
-                    <option value="restore"><?php print __('restore') ?></option>
+                    <option selected="selected" value="restore"><?php print __('restore') ?></option>
                   </select>
                 </div>
-                <input type="submit" value="" class="l-sort-toolbar__filter-apply" />
+                <input type="submit" value="<?php print __('restore').' '.__('backup') ?>" style="width: 100px; height:30px; background-color: #a8cb1c; color: white;" />
               </td>
             </tr>
           </table>
@@ -40,7 +33,8 @@
 
     <div class="l-center units">
     <div class="l-unit header">
-      <div class="subtitle"><?=__('Listing')?>  <?=htmlentities($_GET['backup'])?></div>
+      <div class="subtitle" style="color: black;"><?=__('Listing')?>  <?=htmlentities($_GET['backup'])?></div>
+      <div class="subtitle"><?=__('First select what to restore:')?></div>
     </div>
 
       <?
