--- a/web/templates/admin/list_backup_detail.html
+++ b/web/templates/admin/list_backup_detail.html
@@ -18,7 +18,7 @@
                     <option selected="selected" value="restore"><?php print __('restore') ?></option>
                   </select>
                 </div>
-                <input type="submit" value="<?php print __('restore').' '.__('backup') ?>" style="width: 100px; height:30px; background-color: #a8cb1c; color: white;" />
+                <input type="submit" value="<?php print __('restore').' '.__('selected') ?>" style="width: 100px; height:30px; background-color: #a8cb1c; color: white;" />
               </td>
             </tr>
           </table>
