Adding token for /logout/

--- a/web/templates/admin/list_user.html
+++ b/web/templates/admin/list_user.html
@@ -94,7 +94,7 @@ sort-bandwidth="<?=$data[$key]['U_BANDWIDTH']?>" sort-disk="<?=$data[$key]['U_DI
             <?
               if ($key == $user) {
             ?>
-                <div class="actions-panel__col actions-panel__loginas shortcut-l" key-action="href"><a href="/logout"><?=__('logout')?> <i></i></a><span class="shortcut">&nbsp;L</span></div>
+                <div class="actions-panel__col actions-panel__loginas shortcut-l" key-action="href"><a href="/logout/?token=<?=$_SESSION['token']?>"><?=__('logout')?> <i></i></a><span class="shortcut">&nbsp;L</span></div>
 <?php
               } else {
 ?>
