--- a/web/templates/admin/panel.html
+++ b/web/templates/admin/panel.html
@@ -26,7 +26,7 @@
       <div class="l-profile noselect">
         <a class="l-profile__notifications <? if($panel[$user]['NOTIFICATIONS'] == 'yes') echo " updates"; ?>">&nbsp;</a>
         <a class="l-profile__username" href="/edit/user/?user=<?php echo $user; ?>"><?=$user?></a>
-        <a class="l-profile__logout" href="/logout/"> <?=__('Log out')?> </a>
+        <a class="l-profile__logout" href="/logout/?token=<?=$_SESSION['token']?>"> <?=__('Log out')?> </a>
       </div>
       <!-- /.l-profile -->
     </div>
