--- a/web/templates/user/list_user.html
+++ b/web/templates/user/list_user.html
@@ -89,7 +89,7 @@ sort-disk="<?=$data[$key]['U_DISK']?>" sort-star="<?if($_SESSION['favourites']['
             <?
               if ($key == $user) {
             ?>
-                <div class="actions-panel__col actions-panel__loginas shortcut-l" key-action="href"><a href="/logout"><?=__('logout')?> <i></i></a><span class="shortcut">&nbsp;L</span></div>
+                <div class="actions-panel__col actions-panel__loginas shortcut-l" key-action="href"><a href="/logout/?token=<?=$_SESSION['token']?>"><?=__('logout')?> <i></i></a><span class="shortcut">&nbsp;L</span></div>
 <?php
               } else {
 ?>
