--- a/web/templates/reset_1.html
+++ b/web/templates/reset_1.html
@@ -5,13 +5,14 @@
                         <table>
                             <tr>
                                 <td style="padding: 0 10px 0 42px; height: 280px; width: 170px;">
-                                    <a href="/"><img border=0 src="/images/logo.png" width="124px" height="46px" alt="Vesta Control Panel" /></a>
+                                    <a href="/"><img border=0 src="/images/vesta_logo.png" alt="myVesta Control Panel" /></a>
                                 </td>
                                 <td style="padding: 10px 0 0 0;">
                                     <form method="post" action="/reset/">
                                         <table class="login-box">
                                             <tr>
                                             <td style="padding: 12px 0 0 2px;">
+                                                <input type="hidden" name="token" value="<?=$_SESSION['token'];?>"/>
                                                 <?php print __('RESET_NOTICE');?>
                                             </td>
                                             </tr>
@@ -26,8 +27,18 @@
                                                 </td>
                                             </tr>
                                             <tr>
+                                                <td style="padding: 12px 0 0 2px;">
+                                                    <?php print __('Email');?>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td>
+                                                    <input tabindex="2" type="text" size="20px" style="width:240px" name="email" class="vst-input">
+                                                </td>
+                                            </tr>
+                                            <tr>
                                                 <td style="padding: 20px 0 12px 0;">
-                                                    <input tabindex="2" type="submit" value="<?php print __('Submit');?>" class="button">
+                                                    <input tabindex="3" type="submit" value="<?php print __('Submit');?>" class="button">
                                                     <input type="button" class="button cancel" value="<?php print __('Back');?>" onclick="location.href='/login/'">
                                                 </td>
                                             </tr>
@@ -39,7 +50,7 @@
                                 <td colspan=2>
                                     <div class="login-bottom">
                                         <div style="height:20px"><?php if (isset($ERROR)) echo $ERROR ?></div>
-                                        <a class="vestacp" href="http://vestacp.com" >vestacp.com</a>
+                                        <a class="vestacp" href="https://www.myvestacp.com/">myvestacp.com</a>
                                     </div>
                                 </td>
                             </tr>
