--- a/web/templates/reset_2.html
+++ b/web/templates/reset_2.html
@@ -5,13 +5,14 @@
                         <table>
                             <tr>
                                 <td style="padding: 0 10px 0 42px; height: 280px; width: 170px;">
-                                    <a href="/"><img border=0 src="/images/logo.png" width="124px" height="46px" alt="Vesta Control Panel" /></a>
+                                    <a href="/"><img border=0 src="/images/vesta_logo.png" alt="myVesta Control Panel" /></a>
                                 </td>
                                 <td style="padding: 30px 0 0 0;">
                                     <form method="get" action="/reset/" >
                                         <table class="login-box">
                                             <tr>
                                                 <td style="padding: 12px 0 0 2px;">
+                                                    <input type="hidden" name="token" value="<?=$_SESSION['token'];?>"/>
                                                     <?php print __('RESET_CODE_SENT');?>
                                                 </td>
                                             </tr>
@@ -39,7 +40,7 @@
                                 <td colspan=2>
                                     <div class="login-bottom">
                                         <div style="height:20px"><?php if (isset($ERROR)) echo $ERROR ?></div>
-                                        <a class="vestacp" href="http://vestacp.com" >vestacp.com</a>
+                                        <a class="vestacp" href="https://www.myvestacp.com/">myvestacp.com</a>
                                     </div>
                                 </td>
                             </tr>
