--- a/web/templates/reset_3.html
+++ b/web/templates/reset_3.html
@@ -5,7 +5,7 @@
                         <table>
                             <tr>
                                 <td style="padding: 0 10px 0 42px; height: 280px; width: 170px;">
-                                    <a href="/"><img border=0 src="/images/logo.png" width="124px" height="46px" alt="Vesta Control Panel" /></a>
+                                    <a href="/"><img border=0 src="/images/vesta_logo.png" alt="myVesta Control Panel" /></a>
                                 </td>
                                 <td style="padding: 10px 0 0 0;">
                                     <form method="post">
@@ -15,6 +15,7 @@
                                                     <input type="hidden" name="action" value="confirm" >
                                                     <input type="hidden" name="user" value="<?=htmlentities($_GET['user'], ENT_QUOTES|ENT_HTML5)?>" >
                                                     <input type="hidden" name="code" value="<?=htmlentities($_GET['code'], ENT_QUOTES|ENT_HTML5)?>" >
+                                                    <input type="hidden" name="token" value="<?=$_SESSION['token'];?>"/>
                                                     <?php print __('New Password');?>
                                                 </td>
                                             </tr>
@@ -47,7 +48,7 @@
                                 <td colspan=2>
                                     <div class="login-bottom">
                                         <div style="height:20px"><?php if (isset($ERROR)) echo $ERROR ?></div>
-                                        <a class="vestacp" href="http://vestacp.com" >vestacp.com</a>
+                                        <a class="vestacp" href="https://www.myvestacp.com/">myvestacp.com</a>
                                     </div>
                                 </td>
                             </tr>
