--- a/web/templates/admin/list_firewall.html
+++ b/web/templates/admin/list_firewall.html
@@ -120,7 +120,7 @@ sort-ip="<?=str_replace('.', '', $data[$key]['IP'])?>" sort-comment="<?=$data[$k
             <div class="clearfix l-unit__stat-col--left"><b><?=__($data[$key]['ACTION'])?></b></div>
             <div class="clearfix l-unit__stat-col--left compact"><b><?=__($data[$key]['PROTOCOL'])?></b></div>
             <div class="clearfix l-unit__stat-col--left wide-2"><? if(!empty($data[$key]['COMMENT'])) echo '/ ' . $data[$key]['COMMENT']; else echo "&nbsp;"; ?></div>
-            <div class="clearfix l-unit__stat-col--left wide"><b><?=$data[$key]['PORT']?></b></div>
+            <div class="clearfix l-unit__stat-col--left wide"><b><? if(!empty($data[$key]['PORT'])) echo $data[$key]['PORT']; else echo "&nbsp;"; ?></b></div>
             <div class="clearfix l-unit__stat-col--left"><b><?=$data[$key]['IP']?></b></div>
           </div>
           <!-- /.l-unit__stats -->
