Redesign of hosting panel

--- a/web/templates/admin/list_user.html
+++ b/web/templates/admin/list_user.html
@@ -1,9 +1,9 @@
     <div class="l-center">
       <div class="l-sort clearfix noselect">
         <?php
-          if ($user == 'admin') {
-            echo '<a class="l-sort__create-btn" href="/add/user/" title="'.__('Add User').'"></a>';
-          } else {
+          if ($user != 'admin') {
+            //echo '<a class="l-sort__create-btn" href="/add/user/" title="'.__('Add User').'"></a>';
+          //} else {
             echo '<a class="l-sort__create-btn" href="/add/web/" title="'.__('Add Web Domain').'"></a>';
           }
         ?>
@@ -61,12 +61,15 @@
     <div class="l-separator"></div>
     <!-- /.l-separator -->
 
-
     <div class="l-center units">
       <?php
-        if (isset($changelog))
-          echo "<br /><br /><h1 style=\"margin: 0; color: #aa9c88;\">".__("What's new:")."</h1><br /><pre  style=\"padding: 16px; overflow: auto; font-size: 85%; line-height: 1.45; background-color: #f6f8fa; border-radius: 3px; font-weight: bold;\">".$changelog."</pre>".__("This only admin see after myVesta upgrade, and will dissapear on next refresh.")." ".__("If you missed an update, see our previous")." <a style=\"color: #007bff;\" target=\"_blank\" href=\"https://github.com/myvesta/vesta/blob/master/Changelog.md\">".__("change logs")."</a>.<br />".__("Check out our")." <a style=\"color: #007bff;\" target=\"_blank\" href=\"https://www.myvestacp.com/\">".__("new site, forum and knowledge base")."</a>.<br /><br /><hr style=\"color: #ffebcd;\" />";
-        
+        if ($user == 'admin') {
+            echo '<a class="l-sort__create-btn" style="position: relative; bottom: 0; margin-bottom: 15px; left: 20px;" href="/add/user/" title="'.__('Add User').'"></a>';
+        }
+        if (isset($changelog)) {
+          echo "<br /><br /><div style='margin: -20px 20px 20px 20px; padding: 10px; background: #fff;'><h1 style=\"margin: 0; color: #aa9c88;\">".__("What's new:")."</h1><br /><pre  style=\"padding: 16px; overflow: auto; font-size: 85%; line-height: 1.45; background-color: #f6f8fa; border-radius: 3px; font-weight: bold;\">".$changelog."</pre>".__("This only admin see after myVesta upgrade, and will dissapear on next refresh.")." ".__("If you missed an update, see our previous")." <a style=\"color: #007bff;\" target=\"_blank\" href=\"https://github.com/myvesta/vesta/blob/master/Changelog.md\">".__("change logs")."</a>.<br />".__("Check out our")." <a style=\"color: #007bff;\" target=\"_blank\" href=\"https://www.myvestacp.com/\">".__("new site, forum and knowledge base")."</a>.<br /><br /><hr style=\"color: #ffebcd;\" /></div>";
+        }
+
         foreach ($data as $key => $value) {
           ++$i;
           if ($data[$key]['SUSPENDED'] == 'yes') {
@@ -176,7 +179,7 @@ sort-bandwidth="<?=$data[$key]['U_BANDWIDTH']?>" sort-disk="<?=$data[$key]['U_DI
                 </td>
                 <td>
                   <div class="l-unit__stat-cols clearfix last">
-                    <div class="l-unit__stat-col l-unit__stat-col--left compact"><?=__('Email')?>:</div>
+                    <div class="l-unit__stat-col l-unit__stat-col--left"><?=__('Email')?>:</div>
                     <div class="l-unit__stat-col l-unit__stat-col--right">
                       <b><?=$data[$key]['CONTACT']?></b>
                     </div>
