--- a/web/templates/reset_3.html
+++ b/web/templates/reset_3.html
@@ -4,10 +4,10 @@
                     <td>
                         <table>
                             <tr>
-                                <td style="padding: 0 10px 0 42px; height: 280px; width: 170px;">
-                                    <a href="/"><img border=0 src="/images/vesta_logo.png" alt="myVesta Control Panel" /></a>
+                                <td style="padding: 0; height: 280px; width: 342px;">
+                                    <a href="/"><img border=0 src="/images/vesta_logo.png" alt="Vesta Control Panel" style="margin: 0 0 0 0;" /></a>
                                 </td>
-                                <td style="padding: 10px 0 0 0;">
+                                <td style="padding: 50px 0 0 0;">
                                     <form method="post">
                                         <table class="login-box">
                                             <tr>
