--- a/web/templates/user/panel.html
+++ b/web/templates/user/panel.html
@@ -33,6 +33,7 @@
   <div class="l-content">
     <div class="l-center">
       <div class="l-stat">
+        <a href="/list/user/"><img src="/images/myvesta-large-white-130.png" style="display: block; width: 130px; height: 69px; margin-top: 5px; margin-left: 13px; position: relative;"></a>
         <div class="l-stat__col <?php if($TAB == 'USER' ) echo 'l-stat__col--active' ?>">
           <a href="/list/user/">
             <div class="l-stat__col-title"><?=__('USER')?></div>
@@ -45,7 +46,7 @@
 		<?php if($panel[$user]['WEB_DOMAINS'] != "0") { ?>
 	        <div class="l-stat__col <?php if($TAB == 'WEB' ) echo 'l-stat__col--active' ?>">
 	          <a href="/list/web/">
-	            <div class="l-stat__col-title"><?=__('WEB')?></div>
+	            <div class="l-stat__col-title"><?=__('WEB')?><span><?=$panel[$user]['U_WEB_DOMAINS']?></span></div>
 	            <ul>
 	              <li><?=__('domains')?>: <span><?=$panel[$user]['U_WEB_DOMAINS']?></span></li>
 	              <li><?=__('aliases')?>: <span><?=$panel[$user]['U_WEB_ALIASES']?></span></li>
@@ -57,7 +58,7 @@
 		<?php if($panel[$user]['DNS_DOMAINS'] != "0") { ?>
 	        <div class="l-stat__col <?php if($TAB == 'DNS' ) echo 'l-stat__col--active' ?>">
 	          <a href="/list/dns/">
-	            <div class="l-stat__col-title"><?=__('DNS')?></div>
+	            <div class="l-stat__col-title"><?=__('DNS')?><span><?=$panel[$user]['U_DNS_DOMAINS']?></span></div>
 	            <ul>
 	              <li><?=__('domains')?>: <span><?=$panel[$user]['U_DNS_DOMAINS']?></span></li>
 	              <li><?=__('records')?>: <span><?=$panel[$user]['U_DNS_RECORDS']?></span></li>
@@ -69,7 +70,7 @@
 		<?php if($panel[$user]['MAIL_DOMAINS'] != "0") { ?>
 	        <div class="l-stat__col <?php if($TAB == 'MAIL' ) echo 'l-stat__col--active' ?>">
 	          <a href="/list/mail/">
-	            <div class="l-stat__col-title"><?=__('MAIL')?></div>
+	            <div class="l-stat__col-title"><?=__('MAIL')?><span><?=$panel[$user]['U_MAIL_DOMAINS']?></span></div>
 	            <ul>
 	              <li><?=__('domains')?>: <span><?=$panel[$user]['U_MAIL_DOMAINS']?></span></li>
 	              <li><?=__('accounts')?>: <span><?=$panel[$user]['U_MAIL_ACCOUNTS']?></span></li>
@@ -81,7 +82,7 @@
 		<?php if($panel[$user]['DATABASES'] != "0") { ?>
 	        <div class="l-stat__col <?php if($TAB == 'DB' ) echo 'l-stat__col--active' ?>">
 	          <a href="/list/db/">
-	            <div class="l-stat__col-title"><?=__('DB')?></div>
+	            <div class="l-stat__col-title"><?=__('DB')?><span><?=$panel[$user]['U_DATABASES']?></span></div>
 	            <ul>
 	              <li><?=__('databases')?>: <span><?=$panel[$user]['U_DATABASES']?></span></li>
 	              <li><?=__('spnd')?>: <span><?=$panel[$user]['SUSPENDED_DB']?></span></li>
@@ -92,7 +93,7 @@
 		<?php if($panel[$user]['CRON_JOBS'] != "0") { ?>
 	        <div class="l-stat__col <?php if($TAB == 'CRON' ) echo 'l-stat__col--active' ?>">
 	          <a href="/list/cron/">
-	            <div class="l-stat__col-title"><?=__('CRON')?></div>
+	            <div class="l-stat__col-title"><?=__('CRON')?><span><?=$panel[$user]['U_CRON_JOBS']?></span></div>
 	            <ul>
 	              <li><?=__('jobs')?>: <span><?=$panel[$user]['U_CRON_JOBS']?></span></li>
 	              <li><?=__('spnd')?>: <span><?=$panel[$user]['SUSPENDED_CRON']?></span></li>
@@ -103,13 +104,23 @@
 		<?php if($panel[$user]['BACKUPS'] != "0") { ?>
 	        <div class="l-stat__col <?php if($TAB == 'BACKUP' ) echo 'l-stat__col--active' ?>">
 	          <a href="/list/backup/">
-	            <div class="l-stat__col-title"><?=__('BACKUP')?></div>
+	            <div class="l-stat__col-title"><?=__('BACKUP')?><span><?=$panel[$user]['U_BACKUPS']?></span></div>
 	            <ul>
 	              <li><?=__('backups')?>: <span><?=$panel[$user]['U_BACKUPS']?></span></li>
 	            </ul>
 	          </a>
 	        </div>
 		<?php } ?>
+<?php
+$vesta_version=file_get_contents('/usr/local/vesta/version.txt');
+$vesta_build_date=file_get_contents('/usr/local/vesta/build_date.txt');
+$debian_ver=file_get_contents('/etc/debian_version');
+?>
+        <div style="display: block; padding: 30px 0 0 19px; color: #b9bcbd;">
+            <span style="font-weight: bold;">myVesta</span> <?php echo $vesta_version;?><br />
+            <span style="font-weight: bold;">Build date:</span> <?php echo $vesta_build_date;?><br />
+            <span style="font-weight: bold;">Debian </span> <?php echo $debian_ver;?><br />
+        </div>
       </div>
       <!-- /.l-stats -->
     </div>
