--- a/web/templates/header.html
+++ b/web/templates/header.html
@@ -4,16 +4,27 @@
   <meta charset="utf-8">
   <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
   <title>myVesta - <?=__($TAB)?></title>
-  <link rel="stylesheet" href="/css/styles.min.css?1446554103">
-  <link type="text/css" href="/css/jquery-custom-dialogs.css?1446554103" rel="stylesheet" />
+  <link rel="stylesheet" href="/css/styles.min.css?1446554108">
+  <link type="text/css" href="/css/jquery-custom-dialogs.css?1446554104" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+  <link rel="stylesheet" href="/css/styles.fix.css?1446554108">
   <script>
     //
     //  GLOBAL SETTINGS
     //
+    <?php
+        $CURRENT_USER_FINAL=$_SESSION['user'];
+        if (isset($_SESSION['look']) && $_SESSION['look']!='') $CURRENT_USER_FINAL=$_SESSION['look'];
+    ?>
     var GLOBAL = {};
     GLOBAL.FTP_USER_PREFIX  = 'admin_';
     GLOBAL.DB_USER_PREFIX   = 'admin_';
     GLOBAL.DB_DBNAME_PREFIX = 'admin_';
+    GLOBAL.CURRENT_USER = '<?=$_SESSION['user']?>';
+    GLOBAL.CURRENT_USER_LOOK = '<?=$_SESSION['look']?>';
+    GLOBAL.CURRENT_USER_FINAL = '<?=$CURRENT_USER_FINAL?>';
     GLOBAL.AJAX_URL = '';
   </script>
 </head>
