--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -4,7 +4,7 @@
                     <td>
                         <table>
                             <tr>
-                                <td style="padding: 0 10px 0 42px; height: 280px; width: 170px;">
+                                <td style="padding: 0; height: 280px; width: 342px;">
                                     <a href="/"><img border=0 src="/images/vesta_logo.png" alt="Vesta Control Panel" style="margin: 0 0 0 0;" /></a>
                                 </td>
                                 <td style="padding: 50px 0 0 0;">
