--- a/web/templates/user/list_user.html
+++ b/web/templates/user/list_user.html
@@ -161,7 +161,7 @@ sort-disk="<?=$data[$key]['U_DISK']?>" sort-star="<?if($_SESSION['favourites']['
                 </td>
                 <td>
                   <div class="l-unit__stat-cols clearfix last">
-                    <div class="l-unit__stat-col l-unit__stat-col--left compact"><?=__('Email')?>:</div>
+                    <div class="l-unit__stat-col l-unit__stat-col--left"><?=__('Email')?>:</div>
                     <div class="l-unit__stat-col l-unit__stat-col--right">
                       <b><?=$data[$key]['CONTACT']?></b>
                     </div>
