Update scripts.html, correcting 'Log' label

--- a/web/templates/scripts.html
+++ b/web/templates/scripts.html
@@ -117,7 +117,7 @@
 
 <div class="io-log2">
   <h2 class="io-log2-h2" id="iologbutton2">
-    Log System
+    <?=__('Log')?>
   </h2>
     <div>
 <?php
