--- a/web/templates/admin/list_backup_detail.html
+++ b/web/templates/admin/list_backup_detail.html
@@ -34,7 +34,7 @@ input[type="checkbox"] {
     <!-- /.l-separator -->
 
 
-    <div class="l-center units" style="margin-top:250px; margin-left: 240px; padding-right: 20px;">
+    <div class="l-center units" style="margin-left: 240px; padding-right: 20px;">
     <div class="l-unit header">
       <div class="subtitle" style="color: black;"><?=__('Listing')?>  <?=htmlentities($_GET['backup'])?></div>
       <div class="subtitle"><?=__('First select what to restore')?>:</div>
