Frontend UI performance fix

--- a/web/templates/admin/list_user.html
+++ b/web/templates/admin/list_user.html
@@ -62,8 +62,37 @@
     <!-- /.l-separator -->
 
     <div class="l-center units">
-      <?php
+    <?php
         if ($user == 'admin') {
+    ?>
+        <div class="io-box clearfix">
+            <div class="io-box-left clearfix">
+              <div class="io-box-left-items io-1-homepage-block">
+                <a href="https://www.myvestacp.com/" target="_blank">myVesta</a>
+                <span class="io-description">website</span>
+              </div>
+              <div class="io-box-left-items io-2-homepage-block">
+                <a href="https://forum.myvestacp.com/" target="_blank">Forum</a>
+                <span class="io-description">Ask the questions on our forum</span>
+              </div>
+              <div class="io-box-left-items io-3-homepage-block">
+                <a href="https://github.com/myvesta/vesta" target="_blank">Git</a>
+                <span class="io-description">Become our code contributor</span>
+              </div>
+              <div class="io-box-left-items io-4-homepage-block">
+                <a href="https://forum.myvestacp.com/viewtopic.php?t=814" target="_blank">Donate</a>
+                <span class="io-description">Buy us a coffe</span>
+              </div>
+              <div class="io-box-left-items io-5-homepage-block">
+                <a href="https://wiki.myvestacp.com/" target="_blank">Wiki</a>
+                <span class="io-description">Find solution in our documentation</span>
+              </div>
+            </div>
+            <div class="io-box-right io-banner clearfix">
+              <a href="/list/rrd/"><img src="/list/rrd/image.php?/rrd/la/daily-la.png" alt="SysLoad"></a>
+            </div>
+        </div>
+      <?php
             echo '<a class="l-sort__create-btn" style="position: relative; bottom: 0; margin-bottom: 15px; left: 20px;" href="/add/user/" title="'.__('Add User').'"></a>';
         }
         if (isset($changelog)) {
