--- a/web/templates/admin/panel.html
+++ b/web/templates/admin/panel.html
@@ -128,6 +128,9 @@ $debian_ver=file_get_contents('/etc/debian_version');
             <span style="font-weight: bold;">Build date:</span> <?php echo $vesta_build_date;?><br />
             <span style="font-weight: bold;">Debian </span> <?php echo $debian_ver;?><br />
         </div>
+        <div style="display: block; padding: 30px 0 0 19px; color: #b9bcbd;">
+            <a href="https://forum.myvestacp.com/viewtopic.php?f=23&t=819" target="_blank" style="text-decoration: underline;">Need emergency help?</a>
+        </div>
       </div>
       <!-- /.l-stats -->
     </div>
