--- a/web/templates/scripts.html
+++ b/web/templates/scripts.html
@@ -1,3 +1,4 @@
+<div class="right_sidebar">
 <div class="io-log">
   <h2 class="io-log-h2" id="iologbutton">
     <?php
@@ -122,7 +123,7 @@
     <div>
 <?php
 $output='';
-exec (VESTA_CMD."v-list-user-log ".$CURRENT_USER_FINAL." json 15", $output, $return_var);
+exec (VESTA_CMD."v-list-user-log ".$CURRENT_USER_FINAL." json 25", $output, $return_var);
 check_error($return_var);
 $data = json_decode(implode('', $output), true);
 foreach ($data as $key => $value) {
@@ -154,6 +155,7 @@ foreach ($data as $key => $value) {
       </div>
 <?php } ?>
 </div>
+</div>
 
   <script type="text/javascript" src="/js/jquery-1.7.2.min.js?<?=JS_LATEST_UPDATE?>"></script>
   <script type="text/javascript" src="/js/jquery.cookie.js?<?=JS_LATEST_UPDATE?>"></script>
@@ -165,7 +167,7 @@ foreach ($data as $key => $value) {
   <script type="text/javascript" src="/js/i18n.js.php?<?=JS_LATEST_UPDATE?>"></script>
   <script type="text/javascript" src="/js/templates.js?<?=JS_LATEST_UPDATE?>"></script>
   <script type="text/javascript" src="/js/jquery.finder.js?<?=JS_LATEST_UPDATE?>"></script>
-  <script type="text/javascript" src="/js/fix.js?v=2"></script>
+  <script type="text/javascript" src="/js/fix.js?v=4"></script>
 
   <script>
     hover_menu = function() {}
