--- a/web/templates/header.html
+++ b/web/templates/header.html
@@ -4,12 +4,11 @@
   <meta charset="utf-8">
   <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
   <title>myVesta - <?=__($TAB)?></title>
-  <link rel="stylesheet" href="/css/styles.min.css?1446554108">
-  <link type="text/css" href="/css/jquery-custom-dialogs.css?1446554104" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-  <link rel="stylesheet" href="/css/styles.fix.css?1446554111">
+  <link rel="stylesheet" href="/css/styles.min.css?1446554109">
+  <link type="text/css" href="/css/jquery-custom-dialogs.css" rel="stylesheet" />
+  <link href="/css/fonts/font_sans_pro.css" rel="stylesheet">
+  <link href="/css/fonts/font_lobster.css" rel="stylesheet">
+  <link rel="stylesheet" href="/css/fonts/font_awesome5.css">
   <script>
     //
     //  GLOBAL SETTINGS
