--- a/web/templates/user/panel.html
+++ b/web/templates/user/panel.html
@@ -124,5 +124,9 @@ $debian_ver=file_get_contents('/etc/debian_version');
       </div>
       <!-- /.l-stats -->
     </div>
+
+    <?php
+        include('/usr/local/vesta/web/templates/right.html');
+    ?>
     <div class="l-separator"></div>
     <!-- /.l-separator -->
