UI performance fix 4

--- a/web/templates/admin/list_backup.html
+++ b/web/templates/admin/list_backup.html
@@ -1,6 +1,6 @@
     <div class="l-center">
       <div class="l-sort clearfix noselect">
-        <a href="/schedule/backup/?token=<?=$_SESSION['token']?>" class="l-sort__create-btn" title="<?=__('Create Backup')?>"></a>
+        <a href="/schedule/backup/?token=<?=$_SESSION['token']?>" class="l-sort__create-btn" title="<?=__('Create Backup')?>"><div id="add-icon"></div><div id="tooltip"><?=__('Create Backup')?></div></a>
         <div class="l-sort-toolbar clearfix">
           <table>
             <tr>
