--- a/web/templates/admin/list_dns_rec.html
+++ b/web/templates/admin/list_dns_rec.html
@@ -1,6 +1,6 @@
     <div class="l-center">
       <div class="l-sort clearfix noselect">
-        <a href="/add/dns/?domain=<?=htmlentities($_GET['domain'])?>" title="<?=__('Add DNS Record')?>" class="l-sort__create-btn"></a>
+        <a href="/add/dns/?domain=<?=htmlentities($_GET['domain'])?>" title="<?=__('Add DNS Record')?>" class="l-sort__create-btn"><div id="add-icon"></div><div id="tooltip"><?=__('Add DNS Record')?></div></a>
         <div class="l-sort-toolbar clearfix">
           <table>
             <tr>
