--- a/web/templates/admin/list_firewall_banlist.html
+++ b/web/templates/admin/list_firewall_banlist.html
@@ -1,6 +1,6 @@
     <div class="l-center">
       <div class="l-sort clearfix noselect">
-        <a href="/add/firewall/banlist/" class="l-sort__create-btn" title="<?=__('Ban IP Address')?>"></a>
+        <a href="/add/firewall/banlist/" class="l-sort__create-btn" title="<?=__('Ban IP Address')?>"><div id="add-icon"></div><div id="tooltip"><?=__('Ban IP Address')?></div></a>
 
         <div class="l-sort-toolbar clearfix">
           <table>
