--- a/web/templates/user/list_user.html
+++ b/web/templates/user/list_user.html
@@ -1,11 +1,7 @@
     <div class="l-center">
       <div class="l-sort clearfix noselect">
         <?php
-          if ($user == 'admin') {
-            echo '<a class="l-sort__create-btn" href="/add/user/" title="'.__('Add User').'"></a>';
-          } else {
-            echo '<a class="l-sort__create-btn" href="/add/web/" title="'.__('Add Web Domain').'"></a>';
-          }
+            echo '<a class="l-sort__create-btn" href="/add/web/" title="'.__('Add Web Domain').'"><div id="add-icon"></div><div id="tooltip">'.__('Add Web Domain').'</div></a>';
         ?>
         <ul class="context-menu sort-order" style="display:none;">
           <li entity="sort-date" sort_as_int="1"><span class="name active"><?=__('Date')?></span><span class="up">&nbsp;</span></li>
