--- a/web/templates/admin/list_backup_exclusions.html
+++ b/web/templates/admin/list_backup_exclusions.html
@@ -1,6 +1,6 @@
     <div class="l-center">
       <div class="l-sort clearfix noselect">
-        <a href="/edit/backup/exclusions/" class="l-sort__create-btn edit" title="<?=__('Configure')?>"></a>
+        <a href="/edit/backup/exclusions/" class="l-sort__create-btn edit" title="<?=__('Configure')?>"><div id="add-icon"></div><div id="tooltip"><?=__('Configure')?></div></a>
         <div class="l-sort-toolbar clearfix">
           <table>
             <tr>
