--- a/web/templates/admin/list_dns.html
+++ b/web/templates/admin/list_dns.html
@@ -1,6 +1,6 @@
     <div class="l-center">
       <div class="l-sort clearfix noselect">
-        <a href="/add/dns/" title="<?=__('Add DNS Domain')?>" class="l-sort__create-btn"></a>
+        <a href="/add/dns/" title="<?=__('Add DNS Domain')?>" class="l-sort__create-btn"><div id="add-icon"></div><div id="tooltip"><?=__('Add DNS Domain')?></div></a>
         <ul class="context-menu sort-order" style="display:none;">
           <li entity="sort-date" sort_as_int="1"><span class="name active"><?=__('Date')?></span><span class="up">&nbsp;</span></li>
           <li entity="sort-expire" sort_as_int="1"><span class="name"><?=__('Expire')?></span><span class="up">&nbsp;</span></li>
