--- a/web/templates/admin/list_firewall.html
+++ b/web/templates/admin/list_firewall.html
@@ -1,6 +1,6 @@
     <div class="l-center">
       <div class="l-sort clearfix noselect">
-        <a href="/add/firewall/" class="l-sort__create-btn" title="<?=__('Add Rule')?>"></a>
+        <a href="/add/firewall/" class="l-sort__create-btn" title="<?=__('Add Rule')?>"><div id="add-icon"></div><div id="tooltip"><?=__('Add Rule')?></div></a>
         <ul class="context-menu sort-order" style="display:none;">
           <li entity="sort-action"><span class="name active"><?=__('Action')?></span><span class="up">&nbsp;</span></li>
           <li entity="sort-protocol"><span class="name"><?=__('Protocol')?></span><span class="up">&nbsp;</span></li>
