--- a/web/templates/admin/list_web.html
+++ b/web/templates/admin/list_web.html
@@ -1,6 +1,6 @@
     <div class="l-center">
       <div class="l-sort clearfix noselect">
-        <a href="/add/web/" class="l-sort__create-btn" title="<?=__('Add Web Domain')?>"></a>
+        <a href="/add/web/" class="l-sort__create-btn" title="<?=__('Add Web Domain')?>"><div id="add-icon"></div><div id="tooltip"><?=__('Add Web Domain')?></div></a>
         <ul class="context-menu sort-order" style="display:none;">
           <li entity="sort-date" sort_as_int="1"><span class="name active"><?=__('Date')?></span><span class="up">&nbsp;</span></li>
           <li entity="sort-name"><span class="name"><?=__('Domain')?></span><span class="up">&nbsp;</span></li>
